# tfg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cleanImGuiCache.sh  debug_plane.json  diagram.json  main.cpp  quickRun.sh  repetition.json  scene.json  scene2.json  strand.json  stress_sim.json  super.json
shaders/: ao.slang  bilateral_h.slang  bilateral_v.slang  brick.slang  build.slang  compute.slang  compute_tracing.slang  generation.slang  lighting.slang  palettes.slang  raytracing.slang  shaderio.h  simulation.slang  ssao.slang  tracing.slang
shaders/utils/: bbox.slang  bilateral.slang  common.slang  descriptors.slang  evalFuncs.slang  grid.slang  materials.slang  palettes.slang  quat.slang  rng.slang  sdf.slang  tracing.slang  transforms.slang
utils/: path_utils.hpp  rng.cpp  rng.hpp  scene.cpp  scene.hpp  scene_physics.cpp  scene_serial.cpp  sdf.cpp  sdf.hpp  utils.cpp  utils.hpp
